--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,8 @@
   font-family: 'Mochiy Pop P One', sans-serif,'Outfit','Poppins' ;
  
 }
+.form{
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+}
