--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <br>
   <form>
-    <input class="form-control sm-black" type="text" placeholder="Enter Github Username Here…" required>
+    <input style="font-size: medium;" class="form-control me-2 bg-white text-black p-2" type="text" placeholder="Enter Github Username Here…" required>
    <br>
     <button class="btn btn-outline-success "  type="submit">Search</button>
 
