--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
 *{
   margin: 0px;
   padding: 0px;
-  background-color:#080909;
+  background-color:rgb(79, 83, 89);
   color: rgb(253, 252, 250);
   text-align: center;
   font-family: 'Mochiy Pop P One', sans-serif,'Outfit','Poppins' ;
