--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,2 +1,19 @@
-<img  src={{me.avatarUrl}} alt="avatar">
-<p>{{me.userName}}</p>
+
+<div class="container-fluid">
+  <div class="row gx-4">
+    <div class="col-md-12">
+     <div class="p-3">
+       <div class="row p-4">
+        <div class="col-md-12">
+        <div  class="p-3">
+          <img src="{{me.avatarUrl}}" class="p-2" alt="profile-image">
+          <p id="img">{{me.userName}}</p>
+          <!-- {{user.name}} <br> <small>{{user.login}}</small>
+          <br> Followers <strong>{{user.followers}}</strong>  | Following <strong>{{user.following}}</strong>  -->
+       </div>
+    </div>
+  </div>
+ </div>
+</div>
+</div>
+</div>
