--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,20 +1,46 @@
-
 <div class="container-fluid">
   <div class="row gx-4">
     <div class="col-md-12">
-     <div class="p-3">
-       <div class="row p-4">
-        <div class="col-md-13">
-        <div  class="p-3 ">
-          <img src="{{me.avatarUrl}}" class="p-2" alt="profile-image"><br>
-          <p id="img">{{me.name}}</p>
-          <p id="img">{{me.userName}}</p>
-          <p id="img">{{me.location}}</p>
-          <p id="img">Followers {{me.followers}}|Following {{me.following}}</p><br>
+      <div class="p-3">
+        <div class="row p-4">
+          <div class="col-md-13">
+            <div class="p-3">
+              <img src="{{ me.avatarUrl }}" class="p-2" alt="profile-image" />
+              <br />
+              <p id="img">{{ me.name }}</p>
+              <p id="img">{{ me.userName }}</p>
+              <p id="img">{{ me.location }}</p>
+              <p id="img">
+                Followers {{ me.followers }} | Following {{ me.following }}
+              </p>
+              <br />
+            </div>
+          </div>
         </div>
+      </div>
     </div>
   </div>
- </div>
 </div>
+<!-- <div class="container-fluid">
+  <ul *ngFor="let repo of myrepos">
+<li>{{repo.name}}|{{repo.description}}</li>
+  </ul>
+</div> -->
+
+<div class="container-fluid">
+  <div class="row">
+  <div *ngFor="let repo of myrepos" class="col-sm-4">
+    <div class="card">
+      <div class="card-body ">
+        <h5 class="card-title">{{ repo.name }}</h5>
+        <br />
+        <p>{{ repo.description }}</p>
+        <br />
+        <p>{{ repo.language }}</p>
+        <br />
+      <a href="{{ repo.link }}" style="color: white; text-decoration:none;">View on GitHub</a>
+      </div>
+    </div>
+  </div>
 </div>
 </div>
