--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -5,8 +5,9 @@
         <div class="row p-4">
           <div class="col-md-13">
             <div class="p-3">
+              
               <img src="{{ me.avatarUrl }}" class="p-2" alt="profile-image" />
-              <br />
+              <br> 
               <p id="img">{{ me.name }}</p>
               <p id="img">{{ me.userName }}</p>
               <p id="img">{{ me.location }}</p>
@@ -14,6 +15,8 @@
                 Followers {{ me.followers }} | Following {{ me.following }}
               </p>
               <br />
+              <hr>
+              <h1 class="line1">REPOSITORIES</h1>
             </div>
           </div>
         </div>
@@ -21,26 +24,31 @@
     </div>
   </div>
 </div>
-<!-- <div class="container-fluid">
-  <ul *ngFor="let repo of myrepos">
-<li>{{repo.name}}|{{repo.description}}</li>
-  </ul>
-</div> -->
 
 <div class="container-fluid">
   <div class="row">
-  <div *ngFor="let repo of myrepos" class="col-sm-4">
-    <div class="card">
-      <div class="card-body ">
-        <h5 class="card-title">{{ repo.name }}</h5>
-        <br />
-        <p>{{ repo.description }}</p>
-        <br />
-        <p>{{ repo.language }}</p>
-        <br />
-      <a href="{{ repo.link }}" style="color: white; text-decoration:none;">View on GitHub</a>
-      </div>
+      <div *ngFor="let repo of myrepos" class="col-md-4 col-sm-6 content-card">
+          <div class="card-big-shadow">
+              <div class="card card-just-text" data-background="color" data-color="blue" data-radius="none">
+                  <div class="content">
+                    <h4 class="card-title">{{ repo.name }}</h4>
+                    <p class="description"style="color: white;">“{{ repo.description }}.”</p>
+                    <p>{{ repo.language }}</p>
+                    <button type="button"><a href="{{ repo.link }}"class="title-btn btn-warning"style="color:black; text-decoration:none;" >View on GitHub</a></button>
+                    <!-- <h6 class="title"><a href="{{ repo.link }}"style="color: yellow; text-decoration:none;">View on GitHub</a></h6> -->
+               </div>
+              </div> 
+            </div>
+          </div>
+        </div>
+      </div><!-- end card -->
+
+    <!-- Copyright -->
+    <div class="container-fluid p-3"style="background-color: rgba(0, 0, 0, 0.2) ">
+      © 2022 Copyright:
+      <a class="text-white" href="https://github.com/Teri11" >
+         augustineteri157@gmail.com</a
+        >
     </div>
-  </div>
-</div>
-</div>
+    <!-- Copyright -->
+              
